If an event listener is a function, it should be called and not checked for handleEvent. This also covers callbacks, which follow the same spec but are implemented separately. https://bugs.webkit.org/show_bug.cgi?id=62518

Patch by Rob Brackett <rob@robbrackett.com> on 2011-11-21
Reviewed by Sam Weinig.

Source/WebCore:

Tests: fast/events/dispatch-to-function-with-handle-event.html
       fast/js/callback-function-with-handle-event.html

* bindings/js/JSCallbackData.cpp:
(WebCore::JSCallbackData::invokeCallback):
* bindings/js/JSEventListener.cpp:
(WebCore::JSEventListener::handleEvent):

LayoutTests:

* fast/events/dispatch-to-function-with-handle-event-expected.txt: Added.
* fast/events/dispatch-to-function-with-handle-event.html: Added.
* fast/js/callback-function-with-handle-event-expected.txt: Added.
* fast/js/callback-function-with-handle-event.html: Added.

Canonical link: https://commits.webkit.org/89461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100974 268f45cc-cd09-0410-ab3c-d52691b4dbfc